<resources>
    <string name="app_name">Form</string>
    <string name="title_activity">Registrate</string>
    <string name="name">Nombre :</string>
    <string name="email">Correo Electrónico :</string>
    <string name="password_size">La contraseña debe tener por lo menos 8 dígitos.</string>
    <string name="correo">Email :</string>
    <string name="telefono">Telefono :</string>
    <string name="password">Contraseña :</string>
    <string name="rep_password">Verifique la contraseña :</string>
    <string name="genero">Seleccione su género :</string>
    <string name="genero_respuesta">Género :</string>
    <string name="hobbies">Pasatiempos</string>
    <string name="fecha_naciomiento">Fecha de Nacimiento :</string>
    <string name="lugar_nacimiento">Lugar de Nacimiento :</string>
    <string name="button_save">Guardar</string>
    <string name="checkbox_H">Hombre</string>
    <string name="checkbox_M">Mujer</string>
    <string name="hobbie_videojuegos">Jugar videojuegos</string>
    <string name="hobbie_reed_book">Leer un libro</string>
    <string name="hobbie_walk">Caminar</string>
    <string name="hobbie_develop">Desarrollar</string>
    <string name="city_medellin">Medellín</string>
    <string name="city_sabaneta">Sabaneta</string>
    <string name="city_donmatias">Don Matias</string>
    <string name="city_itagui">Itagüi</string>
    <string name="city_bello">Bello</string>
    <string name="result">Resultado</string>
</resources>
